src/main/grammar/Sophia.g4
grammar Sophia;

@header{
    import main.ast.types.*;
    import main.ast.types.functionPointer.*;
    import main.ast.types.list.*;
    import main.ast.types.single.*;
    import main.ast.nodes.*;
    import main.ast.nodes.declaration.*;
    import main.ast.nodes.declaration.classDec.*;
    import main.ast.nodes.declaration.classDec.classMembersDec.*;
    import main.ast.nodes.declaration.variableDec.*;
    import main.ast.nodes.expression.*;
    import main.ast.nodes.expression.operators.*;
    import main.ast.nodes.expression.values.*;
    import main.ast.nodes.expression.values.primitive.*;
    import main.ast.nodes.statement.*;
    import main.ast.nodes.statement.loop.*;
}

sophia returns[Program sophiaProgram]:
    p=program
    { $sophiaProgram = $p.programRet;}
    EOF
    ;

program returns[Program programRet]:
    {
        $programRet = new Program();
        $programRet.setLine(1);
    }
    (
        c=sophiaClass
        { $programRet.addClass($c.sophiaClassRet); }
    )*
    ;

sophiaClass returns[ClassDeclaration sophiaClassRet]
    locals[FieldDeclaration newField]:
    clskw=CLASS classidn=identifier
    {
        $sophiaClassRet = new ClassDeclaration($classidn.identifierRet);
        $sophiaClassRet.setLine($clskw.getLine());
    }
    (EXTENDS parentidn=identifier { $sophiaClassRet.setParentClassName($parentidn.identifierRet); } )?
    LBRACE (((vd1=varDeclaration {
           newFild= new FieldDeclaration($vd1.varDeclarationRet);
            newField.setLine($newField.getVarDeclaration().getLine());
            $sophiaClassRet.addField($newField);
         }
         | m1=method { $sophiaClassRet.addMethod($m1.methodDeclarationRet); }
         )* cnstr=constructor { $sophiaClassRet.setConstructor($cnstr.constructorDeclarationRet); }
         (vd2=varDeclaration {
            newFild= new FieldDeclaration($vd2.varDeclarationRet);
            newField.setLine($newField.getVarDeclaration().getLine());
            $sophiaClassRet.addField($newField);
            }
         | m2=method { $sophiaClassRet.addMethod($m2.methodDeclarationRet); })*)|
     ((vd3=varDeclaration {
         newFild= new FieldDeclaration($vd3.varDeclarationRet);
         newField.setLine($newField.getVarDeclaration().getLine());
         $sophiaClassRet.addField($newField);
         }
      | m3=method { $sophiaClassRet.addMethod($m3.methodDeclarationRet); } )*)) RBRACE;

varDeclaration returns[VarDeclaration varDeclarationRet]:
    idn=identifier COLON typ=type SEMICOLLON
    {
        $varDeclarationRet = new VarDeclaration($idn.identifierRet, $typ.typeRet);
        $varDeclarationRet.setLine($idn.identifierRet.getLine());
    }
    ;

method returns[MethodDeclaration methodDeclarationRet]
    locals[bool isRetTypeVoid]:
    { isRetTypeVoid = false; }
    df=DEF (rettyp=type| VOID { isRetTypeVoid = true; }) idn=identifier
     {
        $methodDeclarationRet = new MethodDeclaration($idn.identifierRet, isRetTypeVoid? new NullType(): $rettyp.typeRet);
        $methodDeclarationRet.setLine($df.getLine());
     }
     LPAR ma=methodArguments { $methodDeclarationRet.setArgs($ma.methodArgumentsRet); }
     RPAR LBRACE methodBody[methodDeclarationRet] RBRACE
     ;

constructor returns[ConstructorDeclaration constructorDeclarationRet]:
    df=DEF idn=identifier
    {
        $constructorDeclarationRet = new ConstructorDeclaration($idn.identifierRet);
        $constructorDeclarationRet.setLine($df.getLine());
    }
    LPAR ma=methodArguments { $constructorDeclarationRet.setArgs($ma.methodArgumentsRet); }
    RPAR LBRACE methodBody[constructorDeclarationRet] RBRACE;

methodArguments returns[ArrayList<VarDeclaration> methodArgumentsRet]:
    { $methodArgumentsRet = ArrayList<VarDeclaration>(); }
    (fvwt=variableWithType { $methodArgumentsRet.add($fvwt.variableWithTypeRet); }
    (COMMA ovwt=variableWithType { $methodArgumentsRet.add($ovwt.variableWithTypeRet); } )*)?
    ;

variableWithType returns[VarDeclaration variableWithTypeRet]:
    idn=identifier COLON typ=type
    {
        $variableWithTypeRet = new VarDeclaration($idn.identifierRet, $typ.typeRet);
        $variableWithTypeRet.setLine($idn.identifierRet.getLine());
    }
    ;

type returns[Type typeRet]:
    pmdt=primitiveDataType { $typeRet = $pmdt.primitiveDataTypeRet; }
    | lt=listType { $typeRet = $lt.listTypeRet; }
    | fpt=functionPointerType { $typeRet = $fpt.fptrTypeRet; }
    | ct=classType { $typeRet = $ct.classTypeRet; }
    ;

classType returns[ClassType classTypeRet]:
    idn=identifier { $classTypeRet = new ClassType($idn.identifierRet); }
    ;

listType returns[ListType listTypeRet]:
    LIST LPAR
    ((num=INT_VALUE SHARP singtyp=type { $listTypeRet = new ListType($num.int, new ListNameType($singtyp.typeRet)); })
    | (lit=listItemsTypes { $listTypeRet = new ListType($lit.listItemsTypesRet); } ))
    RPAR
    ;

listItemsTypes returns[ArrayList<ListNameType> listItemsTypesRet]:
    { $listItemsTypesRet = new ArrayList<ListNameType>(); }
    flt=listItemType {$listItemsTypesRet.add($flt.listItemTypeRet);}
    (COMMA olt=listItemType {$listItemsTypesRet.add($olt.listItemTypeRet);} )*
    ;

listItemType returns[ListNameType listItemTypeRet]:
    vwt=variableWithType { $listItemTypeRet = new ListNameType($vwt.variableWithTypeRet); }
    | typ=type { $listItemTypeRet = new ListNameType($typ.typeRet); }
    ;

functionPointerType returns[FptrType fptrTypeRet]:
    { $fptrTypeRet = new FptrType(); }
    FUNC LESS_THAN
    (VOID { $fptrTypeRet.setArgumentsTypes(new ArrayList<Type>()); }
        | twc=typesWithComma { $fptrTypeRet.setArgumentsTypes($twc.typesWithCommaRet); } )
    ARROW
    ( VOID { $fptrTypeRet.setReturnType(new NullType()); }
        | rettyp=type { $fptrTypeRet.setReturnType($rettyp.typeRet);} ) GREATER_THAN
    ;

typesWithComma returns[ArrayList<Type> typesWithCommaRet]:
    {$typesWithCommaRet = new ArrayList<Type>;}
    ftyp=type {$typesWithCommaRet.add($ftyp.typeRet); }
    (COMMA otyp=type {$typesWithCommaRet.add($otyp.typeRet); })*
    ;

primitiveDataType returns[Type primitiveDataTypeRet]:
    INT { $primitiveDataTypeRet = new IntType(); }
    | STRING { $primitiveDataTypeRet = new StringType(); }
    | BOOLEAN { $primitiveDataTypeRet = new BoolType(); }
    ;

methodBody[MethodDeclaration _method]:
    (vd=varDeclaration { $_method.addLocalVar($vd.varDeclarationRet); } )*
    (st=statement { $_method.addBodyStatement($st.statementRet); } )*;

statement returns[Statement statementRet]:
    forr=forStatement { $statementRet = $forr.forStatementRet; }
    | foreachh=foreachStatement { $statementRet = $foreachh.foreachStatementRet; }
    | iff=ifStatement { $statementRet = $iff.ifStatementRet; }
    | assignn=assignmentStatement { $statementRet = $assignn.assignmentStatementRet; }
    | printt=printStatement { $statementRet = $printt.printStatementRet; }
    | contbr=continueBreakStatement { $statementRet = $contbr.continueBreakStatementRet; }
    | metcall=methodCallStatement { $statementRet = $metcall.methodCallStatementRet; }
    | rett=returnStatement { $statementRet = $rett.returnStatementRet; }
    | bl=block { $statementRet = $bl.blockRet; } ;

block returns[BlockStmt blockRet]:
    lbrc=LBRACE
    { $blockRet = new BlockStmt(); $blockRet.setLine(lbrc.getLine()); }
    (stm=statement { $blockRet.addStatement($stm.statementRet); } )*
    RBRACE
    ;

assignmentStatement returns[AssignmentStmt assignmentStatementRet]:
    assignn=assignment { $assignmentStatementRet = $assignn.assignmentRet; }
    SEMICOLLON;

assignment returns[AssignmentStmt assignmentRet]:
    orr=orExpression asgn=ASSIGN expr=expression
    {
        $assignmentRet = new AssignmentStmt($orr.orExpressionRet, $expr.expressionRet);
        $assignmentRet.setLine($asgn.getLine());
    }
    ;

printStatement returns[PrintStmt printStatementRet]:
    pr=PRINT LPAR expr=expression RPAR SEMICOLLON
    {
        $printStatementRet = new PrintStmt($expr.expressionRet);
        $printStatementRet.setLine($pr.getLine());
    }
    ;

returnStatement returns[ReturnStmt returnStatementRet]:
    {
        $returnStatementRet = new ReturnStmt();
        $returnStatementRet.setLine($ret.getLine());
    }
    ret=RETURN (expr=expression { $returnStatementRet.setReturnedExpr($expr.expressionRet); } )? SEMICOLLON
    ;

methodCallStatement returns[MethodCallStmt methodCallStatementRet]:
    mc=methodCall SEMICOLLON
    {
        $methodCallStatementRet = new MethodCallStmt($mc.methodCallRet);
        $methodCallStatementRet.setLine($mc.methodCallRet.getLine());
    }
    ;

methodCall returns[MethodCallStmt methodCallRet]: ////////////////////
    instanceexpr=otherExpression ((lpr=LPAR mcainst=methodCallArguments RPAR) | (DOT idn=identifier) | (LBRACK expr=expression RBRACK))*
    (LPAR mca=methodCallArguments RPAR);

methodCallArguments returns[ArrayList<Expression> methodCallArgumentsRet]:
    { $methodCallArgumentsRet = new ArrayList<Expression>(); }
    (fexpr=expression { $methodCallArgumentsRet.add($fexpr.expressionRet); }
    (COMMA oexpr=expression { $methodCallArgumentsRet.add($oexpr.expressionRet); } )*)?;

continueBreakStatement returns[Statement continueBreakStatementRet]:
    (br=BREAK { $continueBreakStatementRet = new BreakStmt(); $continueBreakStatementRet.setLine($br.getLine());}
    | cont=CONTINUE {$continueBreakStatementRet = new ContinueStmt(); $continueBreakStatementRet.setLine($cont.getLine());}
    ) SEMICOLLON
    ;

forStatement returns[FotStmt forStatementRet]:
    forr=FOR
    {
        $forStatementRet = new ForStmt();
        $forStatementRet.setLine($forr.getLine());
    }
    LPAR (initassgn=assignment { $forStatementRet.setInitialize($initassgn.assignmentRet); } )?
    SEMICOLLON (condexpr=expression { $forStatementRet.setCondition($condexpr.expressionRet); } )?
    SEMICOLLON (updateassgn=assignment { $forStatementRet.setUpdate($updateassgn.assignmentRet); } )?
    RPAR bodystmt=statement { $forStatementRet.setBody($bodystmt.statementRet); }
    ;

foreachStatement returns[ForeachStmt foreachStatementRet]:
    forch=FOREACH LPAR idn=identifier IN listexpr=expression
    {
        $foreachStatementRet = new ForeachStmt($idn.identifierRet, $listexpr.expressionRet);
        $foreachStatementRet.setLine($forch.getLine());
    }
    RPAR bodystmt=statement { $foreachStatementRet.setBody($bodystmt.statementRet); }
    ;

ifStatement returns[ConditionalStmt ifStatementRet]:
    iff=IF LPAR condexpr=expression RPAR thenstmt=statement
    {
        $ifStatementRet = new ConditionalStmt($condexpr.expressionRet, $thenstmt.statementRet);
        $ifStatementRet.setLine($iff.getLine());
    }
    (ELSE elsestmt=statement { $ifStatementRet.setElseBody($elsestmt.statementRet); } )?
    ;

expression returns[Expression expressionRet]: orExpression (ASSIGN expression)?;

orExpression: andExpression (OR andExpression)*;

andExpression: equalityExpression (AND equalityExpression)*;

equalityExpression: relationalExpression ((EQUAL | NOT_EQUAL) relationalExpression)*;

relationalExpression: additiveExpression ((GREATER_THAN | LESS_THAN) additiveExpression)*;

additiveExpression: multiplicativeExpression ((PLUS | MINUS) multiplicativeExpression)*;

multiplicativeExpression: preUnaryExpression ((MULT | DIVIDE | MOD) preUnaryExpression)*;

preUnaryExpression: ((NOT | MINUS | INCREMENT | DECREMENT) preUnaryExpression) | postUnaryExpression;

postUnaryExpression: accessExpression (INCREMENT | DECREMENT)?;

accessExpression: otherExpression ((LPAR methodCallArguments RPAR) | (DOT identifier) | (LBRACK expression RBRACK))*;

otherExpression returns[Expression otherExpressionRet]:
    THIS | newExpression | values | identifier | LPAR (expression) RPAR;

newExpression: NEW classType LPAR methodCallArguments RPAR;

values: boolValue | STRING_VALUE | INT_VALUE | NULL | listValue;

boolValue: TRUE | FALSE;

listValue: LBRACK methodCallArguments RBRACK;

identifier returns[Identifier identifierRet]:
    idn=IDENTIFIER
    {
        $identifierRet = new Identifier($idn.text);
        $identifierRet.setLine($idn.getLine());
    }
    ;


DEF: 'def';
EXTENDS: 'extends';
CLASS: 'class';

PRINT: 'print';
FUNC: 'func';

NEW: 'new';

CONTINUE: 'continue';
BREAK: 'break';
RETURN: 'return';

FOREACH: 'foreach';
IN: 'in';
FOR: 'for';
IF: 'if';
ELSE: 'else';

BOOLEAN: 'bool';
STRING: 'string';
INT: 'int';
VOID: 'void';
NULL: 'null';
LIST: 'list';

TRUE: 'true';
FALSE: 'false';

THIS: 'this';

ARROW: '->';
GREATER_THAN: '>';
LESS_THAN: '<';
NOT_EQUAL: '!=';
EQUAL: '==';

MULT: '*';
DIVIDE: '/';
MOD: '%';
PLUS: '+';
MINUS: '-';
AND: '&&';
OR: '||';
NOT: '!';
QUESTION_MARK: '?';

ASSIGN: '=';

INCREMENT: '++';
DECREMENT: '--';

LPAR: '(';
RPAR: ')';
LBRACK: '[';
RBRACK: ']';
LBRACE: '{';
RBRACE: '}';

SHARP: '#';
COMMA: ',';
DOT: '.';
COLON: ':';
SEMICOLLON: ';';

INT_VALUE: '0' | [1-9][0-9]*;
IDENTIFIER: [a-zA-Z_][A-Za-z0-9_]*;
STRING_VALUE: '"'~["]*'"';
COMMENT: ('//' ~( '\r' | '\n')*) -> skip;
WS: ([ \t\n\r]) -> skip;
